Added edit support

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
       </div>
     </div>
   </div>
-
+  <button onclick = "githubSignin()">Github Signin</button>
+  <button onclick = "githubSignout()">Github Signout</button>
   <!-- Script -->
   <script src="assets/javascript/app.js"></script>
 
